--- a/templates/movies.html
+++ b/templates/movies.html
@@ -92,7 +92,7 @@
                             })
                             .catch(error => console.error('Error fetching movie details:', error));
                     });
-                    
+
                     moviesContainer.appendChild(card);
                 });
 
@@ -102,7 +102,7 @@
             function updateCardWithData(card, data) {
                 card.querySelector('.card-image').style.backgroundImage = `url(${data.poster_path})`;
                 card.querySelector('.card-details').innerHTML = `
-                    <div>Overview: ${data.overview}</div>
+                    <div>Overview: ${data.overview.length > 300 ? data.overview.slice(0, 300) + '...' : data.overview}</div>
                     <div>Popularity: ${data.popularity}</div>
                     <div>Vote Average: ${data.vote_average}</div>
                     <div>Vote Count: ${data.vote_count}</div>
